@@ -375,13 +375,14 @@
 		<param name="height">50</param>
 		<param name="visible">true</param>
 		<param name="visible2">true</param>
+		<param name="colordiffuse">$VAR[MediaFlagsColorVar]</param>
 		<definition>
 			<control type="image">
 				<width>$PARAM[width]</width>
 				<height>$PARAM[height]</height>
 				<fadetime>0</fadetime>
 				<aspectratio align="right">keep</aspectratio>
-				<texture colordiffuse="$VAR[MediaFlagsColorVar]">$PARAM[texture]</texture>
+				<texture colordiffuse="$PARAM[colordiffuse]">$PARAM[texture]</texture>
 				<visible>$PARAM[visible]</visible>
 				<visible>$PARAM[visible2]</visible>
 			</control>
@@ -407,6 +408,7 @@
 					<visible>String.IsEqual($PARAM[infolabel_prefix]ListItem.DBtype,tvshow) | Control.HasFocus(6600)</visible>
 					<include content="MediaFlag">
 						<param name="texture" value="$INFO[Skin.String(studiologos.path)]$INFO[$PARAM[infolabel_prefix]ListItem.Studio,,.png]" />
+						<param name="colordiffuse" value="" />
 					</include>
 				</control>
 				<control type="group">
@@ -415,6 +417,7 @@
 					<visible>!String.IsEqual($PARAM[infolabel_prefix]ListItem.DBtype,tvshow) + !Control.HasFocus(6600)</visible>
 					<include content="MediaFlag">
 						<param name="texture" value="$INFO[Skin.String(recordlabels.path)]$INFO[$PARAM[infolabel_prefix]ListItem.Property(Album_Label),,.png]" />
+						<param name="colordiffuse" value="" />
 					</include>
 				</control>
 				<control type="group">
